Bug 493882 - Lyrics don't show the first (or two) sentence of the song
Summary: Lyrics don't show the first (or two) sentence of the song
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Lyrics (other bugs)
Version First Reported In: 3.1.0
Platform: Other Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-30 18:00 UTC by victorhck
Modified: 2025-03-09 17:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
show how Amarok don't show the lyrics from the beggining (141.77 KB, image/png)
2024-09-30 18:00 UTC, victorhck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description victorhck 2024-09-30 18:00:58 UTC
Created attachment 174237 [details]
show how Amarok don't show the lyrics from the beggining

SUMMARY

Lyrics don't show the first (or two) sentence of the song

STEPS TO REPRODUCE
1.  Play a song
2. Show in lyrics the first sentences, the beginning is missing
3. 

OBSERVED RESULT

The song is not showed from the beginning

EXPECTED RESULT

Sho the whole song lyrics

Operating System: openSUSE Tumbleweed 20240927
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.11.0-1-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i3-7100U CPU @ 2.40GHz
Memory: 7.7 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 620

ADDITIONAL INFORMATION

a screenshot attached
Comment 1 Tuomas Nurmi 2024-09-30 18:13:03 UTC
Thank you for the report!
I'm not immediately able to reproduce with 3.1.1. I edited the lyrics applet code a bit (ported from QtControls 1 to 2) between 3.1.0 and 3.1.1, so if  you are encountering this with 3.1.0, I'd be very interested to hear if updating to 3.1.1 (released yesterday) actually fixes this.
Comment 2 victorhck 2024-09-30 18:15:36 UTC
Ok.
I'll wait that Tumbleweed update Amarok to the new version, and I'll check.

Greetings, and thanks for your work!
Comment 3 victorhck 2024-10-02 14:32:36 UTC
(In reply to Tuomas Nurmi from comment #1)
> Thank you for the report!
> I'm not immediately able to reproduce with 3.1.1. I edited the lyrics applet
> code a bit (ported from QtControls 1 to 2) between 3.1.0 and 3.1.1, so if 
> you are encountering this with 3.1.0, I'd be very interested to hear if
> updating to 3.1.1 (released yesterday) actually fixes this.

Today updated to Amarok 3.1.1 and the same issue...

Greetings
Comment 4 Tuomas Nurmi 2024-10-05 10:48:38 UTC
Okay, thank you for testing. Can't reproduce right away myself, but I'll try harder later.
Comment 5 Tuomas Nurmi 2025-01-25 15:53:06 UTC
Git commit d02d738b4053dc5844b3f846b8cba2d72f8ec502 by Tuomas Nurmi.
Committed on 25/01/2025 at 15:43.
Pushed by nurmi into branch 'master'.

Don't cut out the first line of lyrics

At the time of the initial implementation, lyrics.ovh results had something else
than lyrics on the first row of the results, although I'm not quite sure anymore
what was that.

However, now it seems that there's no such extra first row any more, it seems, so
don't cut it out. Also, even if there's only one row in the results, use them anyhow,
as there seem to be some data in there that lacks linebreaks. Having everything on
one line is probably still better than having no lyrics results.

M  +1    -0    ChangeLog
M  +2    -5    src/lyrics/LyricsManager.cpp

https://invent.kde.org/multimedia/amarok/-/commit/d02d738b4053dc5844b3f846b8cba2d72f8ec502
Comment 6 victorhck 2025-02-20 16:29:10 UTC
Hello.
Updated to 3.2.2 in my Tumbleweed machine, I tested today and seems that the issue is not solved...
Don't show the first line in Lyrics.
Greetings.
Comment 7 Tuomas Nurmi 2025-02-20 21:00:10 UTC
Okay, thank you for testing. That's interesting. I could reproduce this with some songs and fixed it with them. I wonder if there's another issue lying in somewhere, too. Does it happen with every track? Can you verify that the lyrics are freshly fetched and not earlier cached ones by pressing the refresh button in the lyrics applet?
Comment 8 victorhck 2025-02-21 15:52:04 UTC
ups! sorry for the noise!
I tested again and seems to be ok now!
So maybe it's something related what you said about cached lyrics or such...
Greetings!
And thanks a lot for your work!!
Comment 9 Tuomas Nurmi 2025-02-21 16:24:28 UTC
Great to hear, thank you for confirming! Happy listening!
Comment 10 victorhck 2025-03-09 17:21:18 UTC
(In reply to Tuomas Nurmi from comment #1)
> Thank you for the report!
> I'm not immediately able to reproduce with 3.1.1. I edited the lyrics applet
> code a bit (ported from QtControls 1 to 2) between 3.1.0 and 3.1.1, so if 
> you are encountering this with 3.1.0, I'd be very interested to hear if
> updating to 3.1.1 (released yesterday) actually fixes this.

sorry for late answer...
And Yes!! Seems to be fixed!! 
Thanks a lot!!