Don't cut out the first line of lyrics

At the time of the initial implementation, lyrics.ovh results had something else
than lyrics on the first row of the results, although I'm not quite sure anymore
what was that.

However, now it seems that there's no such extra first row any more, it seems, so
don't cut it out. Also, even if there's only one row in the results, use them anyhow,
as there seem to be some data in there that lacks linebreaks. Having everything on
one line is probably still better than having no lyrics results.

BUG: 493882